# AlphaLoop_v3

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  alembic.ini  alphaloop.db-shm  alphaloop.db-wal  docker-compose.yml  heartbeat.json  pyproject.toml  run.bat
.claude/: launch.json  settings.local.json
.github/workflows/: ci.yml
checkpoints/: 0f6c269ab65c.json  17a31a47b2c5.json  207463d70ac8.json  2b57c66bfb92.json  42d45c445680.json  4fe9efa797cd.json  5ca2509b6adc.json  98f6037e78d8.json  9ad968867460.json  a44c1d1641ae.json  b62601f62e69.json  bc4b8c73313f.json  bcba2a023277.json  c4ad0597f579.json  e6bbd4378088.json  f21d782c3661.json
docs/: change-log.md
docs/claude/: claude-agents.md  claude-ai-integration.md  claude-context.md  claude-pipelines.md  claude.md
docs/planning/: institutional-desk-gap-plan.md  plan-architecture.md  plan-ui.md  (+6 more)
scripts/: gate2_mode_analysis.py  migrate_v1_settings.py  migrate_v2_db.py  migrate_v2_settings.py  probe_stage4b_quality.py  replay_live_cycles.py  replay_pipeline.py  replay_sim.py
strategy_versions/: BTCUSD_v1.json  XAUUSD_v1.json  XAUUSD_v10.json  XAUUSD_v11.json  XAUUSD_v12.json  XAUUSD_v13.json  XAUUSD_v14.json  XAUUSD_v15.json  XAUUSD_v16.json  XAUUSD_v17.json  XAUUSD_v18.json  XAUUSD_v19.json  XAUUSD_v20.json  XAUUSD_v21.json  XAUUSD_v22.json  XAUUSD_v23.json  XAUUSD_v24.json  XAUUSD_v25.json  XAUUSD_v26.json  XAUUSD_v27.json  XAUUSD_v28.json  XAUUSD_v29.json  XAUUSD_v3.json  XAUUSD_v30.json  XAUUSD_v31.json  XAUUSD_v32.json  XAUUSD_v33.json  XAUUSD_v34.json  XAUUSD_v35.json  XAUUSD_v36.json  XAUUSD_v37.json  XAUUSD_v38.json  XAUUSD_v39.json  XAUUSD_v4.json  XAUUSD_v40.json  XAUUSD_v41.json  XAUUSD_v42.json  XAUUSD_v43.json  XAUUSD_v44.json  XAUUSD_v45.json  (+18 more)
tests/: conftest.py
(+356 files in other folders)
