[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "alphaloop"
version = "3.0.0"
description = "Multi-asset AI trading system with signal generation, validation, and execution"
requires-python = ">=3.11"
dependencies = [
    # Web UI & API server
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.29.0",
    "python-dotenv>=1.0.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "python-multipart>=0.0.9",

    # AI APIs
    "anthropic>=0.25.0",
    "google-genai>=1.0.0",
    "openai>=1.30.0",
    "httpx>=0.27.0",

    # Data & Analysis
    "pandas>=2.0.0",
    "numpy>=1.26.0",
    "yfinance>=0.2.40",

    # Database
    "sqlalchemy[asyncio]>=2.0.0",
    "aiosqlite>=0.20.0",
    "alembic>=1.13.0",

    # Backtesting / Optimisation
    "optuna>=3.6.0",
    "vectorbt>=0.28.0",

    # Logging
    "structlog>=24.0.0",

    # MT5 (Windows only)
    # MetaTrader5>=5.0.45
]

[project.optional-dependencies]
mt5 = ["MetaTrader5>=5.0.45"]
postgres = ["asyncpg>=0.29.0"]
redis = ["redis>=5.0.0"]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "mypy>=1.10.0",
    "httpx>=0.27.0",
]

[project.scripts]
alphaloop = "alphaloop.main:main"

[tool.hatch.build.targets.wheel]
packages = ["src/alphaloop"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"

[tool.coverage.report]
fail_under = 80
exclude_lines = ["if TYPE_CHECKING:", "pragma: no cover"]

[tool.coverage.run]
source = ["src/alphaloop"]
omit = ["*/migrations/*", "*/webui/static/*"]

[tool.mypy]
python_version = "3.11"
strict = true
